--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Head -->
 <head>
 
-<title>Art</title>
+<title>M-颓废</title>
 
 <!-- Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,7 +60,7 @@
 					<div class="w3_navigation_pos">
 						<a href="index.html">
 							<img src="images/logo.png" alt="Odyssey">
-							<h1>ODYSSEY</h1>
+							<h1>TOM</h1>
 						</a>
 					</div>
 				</div>
@@ -797,7 +797,7 @@
 
 	<!-- Copyright -->
 	<div class="copyright">
-		<p>Copyright &copy; 2017.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+		<p>Copyright &copy; 2017.Tom All rights reserved.</p>
 	</div>
 	<!-- //Copyright -->
 
