--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
 
 
 	<!-- Map -->
-		<div id="map"></div>
+		<div id="map" style="display: none;"></div>
 	<!-- //Map -->
 
 
@@ -797,7 +797,7 @@
 
 	<!-- Copyright -->
 	<div class="copyright">
-		<p>Copyright &copy; 2017.Tom All rights reserved.</p>
+		<p>Copyright &copy; 2019.Tom All rights reserved.</p>
 	</div>
 	<!-- //Copyright -->
 
