--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 						<span class="icon-bar"></span>
 					</button>
 					<div class="w3_navigation_pos">
-						<a href="index.html">
+						<a href="/">
 							<img src="images/logo.png" alt="Odyssey">
-							<h1>TOM</h1>
+							<h1>TAO</h1>
 						</a>
 					</div>
 				</div>
@@ -915,7 +915,7 @@
 		<!-- //Slide-To-Top JavaScript -->
 
 	<!-- //Custom-JavaScript-File-Links -->
-
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1275840363'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1275840363' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 <!-- //Body -->
 
